# rust-chat

./: .env  Cargo.toml  README.md  deny.toml  test.rest
chat_server/: Cargo.toml  app.yml  test.rest
chat_server/fixtures/: decoding.pem  encoding.pem
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  middlewares.rs  models.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs
chat_server/src/middlewares/: auth.rs  request_id.rs  server_time.rs
chat_server/src/models/: user.rs
chat_server/src/utils/: jwt.rs
migrations/: 20250115082531_initial.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
sql/: init.sql
src/: config.rs  lib.rs  main.rs
src/handlers/: auth.rs  chat.rs  messages.rs
