[workspace]
members = [
    "chat_server", "notify_server",
]
resolver = "2"

[workspace.dependencies]
# 仅放置公共依赖, 如果特定工程需要的, 放到工程里面去
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["http2", "multipart", "query", "tracing"] }
axum-macros = "0.4.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = ["chrono","postgres", "runtime-tokio", "tls-rustls"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }